--- a/client/css/style.css
+++ b/client/css/style.css
@@ -3,6 +3,40 @@
 	background-color: black;
 }
 
+.command_input{
+	position: absolute;
+	bottom: 5vh;
+	left: 5vh;
+	padding: 0.8vh;
+	width: 100vh;
+	background-color: transparent;
+}
+
+#current_message{
+	width: 100vh;
+	height: 4vh;
+	border: 0.3vh solid white;
+	border-radius: 0.8vh;
+	margin-bottom: 1.3vh;
+	color: white;
+	font-size: 3.5vh;
+	padding: 0.5vh;
+}
+#current_message:focus{
+	border: 0.3vh solid #00FFF2;
+}
+
+#previous_messages{
+	display: block;
+	overflow: auto;
+	width: 102vh;
+	height: 12vh;
+	border: none;
+	color: white;
+	font-size: 3.5vh;
+	background-color: transparent;
+}
+
 .function_list{
 	overflow-y: auto;
 	position: absolute;
