--- a/client/css/style.css
+++ b/client/css/style.css
@@ -13,7 +13,7 @@
 }
 
 #current_message{
-	width: 100vh;
+	width: 96vh;
 	height: 4vh;
 	border: 0.3vh solid white;
 	border-radius: 0.8vh;
@@ -29,7 +29,7 @@
 #previous_messages{
 	display: block;
 	overflow: auto;
-	width: 102vh;
+	width: 98vh;
 	height: 12vh;
 	border: none;
 	color: white;
@@ -37,13 +37,22 @@
 	background-color: transparent;
 }
 
+.container{
+	float: right;
+	height: 90vh;
+	width: 93vh;
+	margin: 3vh;
+	border: 4px solid white;
+	border-radius: 1.6vh;
+}
+
 .function_list{
 	overflow-y: auto;
 	position: absolute;
 	top: 7vh;
-	right: 7vh;
-	height: 39vh;
-	width: 65.5vh;
+	right: 72vh;
+	height: 52vh;
+	width: 23vh;
 	border: 4px solid #00FFF2;
 	border-radius: 1.6vh;
 
@@ -74,21 +83,12 @@
 	border-radius: 1vh;
 }
 
-.container{
-	float: right;
-	height: 88vh;
-	width: 70vh;
-	margin: 3.5vh;
-	border: 4px solid white;
-	border-radius: 1.6vh;
-}
-
 .function_defining{
 	position: absolute;
-	bottom: 8vh;
-	right: 7vh;
-	height: 38vh;
-	width: 61.5vh;
+	top: 7vh;
+	right: 6vh;
+	height: 48vh;
+	width: 59vh;
 	border: 4px solid #00FFF2;
 	border-radius: 1.6vh;
 	padding: 2vh;
@@ -135,5 +135,19 @@ textarea:focus{
 
 .submit_button_wrapper button{
 	color: white;
+}
+
+.function_errors{
+	overflow-y: auto;
+	position: absolute;
+	top: 62vh;
+	right: 6vh;
+	height: 30vh;
+	width: 89vh;
+	border: 4px solid #00FFF2;
+	border-radius: 1.6vh;
+
+	color: white;
+	font-size: 3.5vh;
 }
 
