--- a/client/css/style.css
+++ b/client/css/style.css
@@ -155,3 +155,29 @@ textarea:focus{
 	border: 4px solid red !important;
 }
 
+
+
+.hacked_container{
+	display: none;
+	position: absolute;
+	top: 36%;
+	right: 11%;
+	border: 2vh solid white;
+
+	color: red;
+	font-size: 20vh;
+}
+
+.hack_activated{
+	display: block;	
+}
+
+.hacked_message{
+	display: block;	
+	top: 36%;
+	right: 4.5%;
+	font-size: 9vh;
+	text-align: center;
+}
+
+
