--- a/client/css/style.css
+++ b/client/css/style.css
@@ -3,6 +3,21 @@
 	background-color: black;
 }
 
+.arena_container{
+	position: absolute;
+	top: 4.3vh;
+	left: 5vh;
+	width: 96vh;
+	height: 66vh;
+	border: 4px solid white;
+	border-radius: 1.6vh;
+	background-color: transparent;
+	overflow: hidden;
+}
+canvas{
+	background-color: pink;
+}
+
 .command_input{
 	position: absolute;
 	bottom: 5vh;
@@ -79,7 +94,7 @@
 	height: 2vh;
 }
 ::-webkit-scrollbar-thumb {
-	background: rgb(97.3%, 82.4%, 82.4%);
+	background: pink;
 	border-radius: 1vh;
 }
 
