--- a/client/css/style.css
+++ b/client/css/style.css
@@ -7,7 +7,7 @@
 	position: absolute;
 	top: 4.3vh;
 	left: 5vh;
-	width: 96vh;
+	width: 92vh;
 	height: 66vh;
 	border: 4px solid white;
 	border-radius: 1.6vh;
@@ -23,12 +23,12 @@ canvas{
 	bottom: 5vh;
 	left: 5vh;
 	padding: 0.8vh;
-	width: 100vh;
+	width: 96vh;
 	background-color: transparent;
 }
 
 #current_message{
-	width: 96vh;
+	width: 91vh;
 	height: 4vh;
 	border: 0.3vh solid white;
 	border-radius: 0.8vh;
@@ -44,12 +44,13 @@ canvas{
 #previous_messages{
 	display: block;
 	overflow: auto;
-	width: 98vh;
+	width: 94vh;
 	height: 12vh;
 	border: none;
 	color: white;
 	font-size: 3.5vh;
 	background-color: transparent;
+	margin-left: 1vh;
 }
 
 .container{
